Fix extent map overlap and whitespace issues at very wide resolutions.

--- a/assets/99_app.css
+++ b/assets/99_app.css
@@ -119,8 +119,17 @@ label.label:not(:last-child) {
 	.extent-wrapper.mobile {
 		display: none;
 	}
+}
+
+@media (min-width: 768px) and (max-width: 1699px) {
 	.extent-map {
 		margin-top: calc(200px - (1vw * 15));
+	}
+}
+
+@media (min-width: 1700px) {
+	.extent-map {
+		margin-top: -60px;
 	}
 }
 
